# ToDoListAPP

./: to-do-list.cpp  to-do-list.ilk
src/app/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mainwindow.cpp  mainwindow.h  toDoList.sln  toDoList.vcxproj  toDoList.vcxproj.filters
src/app/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
src/app/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
src/app/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
